Implement idempotent [POST]
